# agency-swarm-lab

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.browsing.amd64  Dockerfile.browsing.arm64  LICENSE  README.md  agency-swarm.py  api.env  requirements.txt
AIProjectManager/: Dockerfile  requirements.txt
AIProjectManager/Slack-app/: .env.example  app.py  firebase_service_account_key_example.json
AstraOpenSourceSwarm/: .env.bkp  README.md  agency.py  agency_ollama.py  demo_gradio.py  docker-compose.yaml  pyproject.toml  requirements.txt
AstraOpenSourceSwarm/CEO/: CEO.py  instructions.md
AstraOpenSourceSwarm/GoogleGeminiAgent/: GoogleGeminiAgent.py  __init__.py
AstraOpenSourceSwarm/GroqAgent/: GroqAgent.py  __init__.py  instructions.md
AstraOpenSourceSwarm/GroqAgent/tools/: ExampleTool.py
AstraOpenSourceSwarm/LlamaAgent/: LlamaAgent.py  __init__.py
AstraOpenSourceSwarm/LlamaAgent/tools/: BraveSearchTool.py  WolframAlphaTool.py
CodeGuardiansAgency/: README.md  __init__.py  agency.py  agency_manifesto.md
CodeGuardiansAgency/CEO/: CEO.py  __init__.py  instructions.md
CodeSolutionAgency/: __init__.py  agency.py  agency_manifesto.md
Docker/: README.md
MetaMarkAgency/: README.md  __init__.py  agency.py  agency_manifesto.md  requriements.txt
OpenSourceSwarm/: README.md  agency.py  demo_gradio.py  function_calling_support.py  litellm_config.yaml  requirements.txt
WebDevCrafters/: README.md  __init__.py  agency.py  agency_manifesto.md  app2.js  package-lock.json  package.json  parse_jsx.jsx  parse_jsx.tsx  requirements.txt
(+74 files in other folders)
